using CalculateReset function to set Resets