@@ -13,6 +13,7 @@ import cdm.base.staticdata.party.CounterpartyRoleEnum;
 import cdm.base.staticdata.party.Party;
 import cdm.base.staticdata.party.metafields.ReferenceWithMetaParty;
 import cdm.event.common.*;
+import cdm.event.common.functions.CalculateReset;
 import cdm.event.workflow.EventInstruction;
 import cdm.event.workflow.EventTimestamp;
 import cdm.event.workflow.EventTimestampQualificationEnum;
@@ -1042,8 +1043,14 @@ public class BusinessEventExecutionTest extends AbstractExampleTest {
      */
     public static ResetInstruction buildResetPrimitiveInstruction(ReferenceWithMetaPayout payout, Payout payout1, Date date) {
 
-        List<Reset> reset = Collections.singletonList(Reset.builder().setResetDate(date)         // The date on which the reset occurs.
-                .setRateRecordDate(date).build());// The date for recording the rate associated with the reset.
+        CalculateReset calculateReset = new CalculateReset.CalculateResetDefault();
+
+        List<? extends Reset> resets = calculateReset.evaluate(CalculateResetInstruction.builder()
+                .setPayout(List.of(payout))
+                .setResetDate(date)
+                .setRateRecordDate(date)
+                .build());
+
 //TODO Review if payout1 is used
         // Initialize and build the ResetInstruction.
         return ResetInstruction.builder()
@@ -1051,7 +1058,7 @@ public class BusinessEventExecutionTest extends AbstractExampleTest {
                // .setRateRecordDate(date)    // The date for recording the rate associated with the reset.
                 //.setPayout(List.of(payout))          // Associates the reset instruction with a referenced payout.
                 //.setPayoutValue(payout1)
-                .setReset(reset)
+                .setReset(resets)
                 .build();                   // Builds and returns the finalized ResetInstruction.
     }
 
